# ChangeLog for media-sound/mixxx
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  23 Jun 2013; Hakan Demiralp (keenblade) <keenblade@tuxfamily.org>
  mixxx-1.11.0.ebuild, mixxx-1.11.9999.ebuild, mixxx-9999.ebuild:
  mixxx: for all mixxx ebuilds, fidlib dependency version is adjusted to the
  available portage version

*mixxx-1.11.0 (23 May 2013)

  23 May 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
  +mixxx-1.11.0.ebuild, mixxx-1.11.9999.ebuild, mixxx-9999.ebuild,
  +files/mixxx-1.11.0-cflags.patch, +files/mixxx-1.11.0-docs.patch,
  +files/mixxx-1.11.0-no-bzr.patch, +files/mixxx-1.11.0-system-libs.patch,
  files/mixxx-1.11.9999-no-bzr.patch, files/mixxx-1.11.9999-system-libs.patch,
  files/mixxx-9999-no-bzr.patch, files/mixxx-9999-system-libs.patch,
  metadata.xml:
  Move to EAPI 5.
  Respect EPREFIX.
  Use an array for the arguments to escons.
  Added missing dependencies.
  Added a hid USE flag.
  All patches now work.
  Thanks a lot to Alex Barker for submitting his work on the ML.

  10 Mar 2013; Dominique Michel <dominique@tuxfamily.org>
  mixx-1.11.9999.ebuild, mixx-9999.ebuild: Commented out system-libs.patch
  that doesn't apply anymore.

  09 Mar 2013; Dominique Michel <dominique@tuxfamily.org>
  mixx-1.11.9999.ebuild, mixx-9999.ebuild: Moved QT deps to /dev-qt/*

  01 Oct 2012; Gavin Pryke (gavlee) <gavinlee303@googlemail.com>
  files/mixxx-1.11.9999-no-bzr.patch, files/mixxx-9999-no-bzr.patch:
  apply patches thanks to Alex Barker. small repoman payments.
  dev-util/pkgconfig -> virtual/pkgconfig

  11 Aug 2012; Dominique Michel <dominique@tuxfamily.org>
  -mixxx-1.10.ebuild: removed outdated version
  +mixxx-1.11.9999.ebuild, -mixxx-1.10.9999.ebuild: bumped live ebuild
  mixxx-9999.ebuild: dependencies fix
  Thanks to Alex Barker for those fixes

  The reason to have to live ebuilds is than the 1.x.9999 is updated more often
  and than it can contain updates that fix bugs in the last official release 
