@@ -11,8 +11,8 @@ AUX mixxx-9999-docs.patch 438 SHA256 19377d095e34071010ddda59b03b86a63b82f2663dc
 AUX mixxx-9999-no-bzr.patch 1598 SHA256 2811df95e2d305efccdeb5c86bde702bfe9d26e0594943bd124c20b4d61c63c0 SHA512 622e1520ca6cf40e99d89b9359a91e1b14435e09c5271dbb42ef65ed3695257ac98234c13129c5f2df1b792317ca80175ef0a3f51ff6470b2097812e6bd9d14b WHIRLPOOL f4a08c38655b3a4f2d12d3fc1ec57609ccd73d15386eea85b214f24580d6d0f9cd97f3e472a13a2d4dcca2da5de10e9e3a05df8c9d22455e6bbb23c49e295a97
 AUX mixxx-9999-system-libs.patch 8072 SHA256 996c6a170e06a5b4b0250f6fcefd80be8cb6d51325ee19c231360f1892567cb1 SHA512 d8d6ab9162b365288e224bfe2611c3322d539e35284c26ede0c829a29508a1047ad8e28c08bc769a0c72bfc70e69ebca71ac8e0217fb78c5904582153c1ae267 WHIRLPOOL 0fffac4355f882e01fefaaca19cdbf9cc048d1ef6892f2451c7e7163ad19fa17e41685980acb8cd62d4530010f3ec88db8962827d35fb9f9ec5ff564adaafa89
 DIST mixxx-1.11.0-src.tar.gz 24473835 SHA256 00961b5d6c1e6d6686d76e55de474b943bbeff4e59b163dddd3d9940dc1b0331 SHA512 a42c2e3a648986e401f9812315942b5c68e0bc4f47ce867eb043d64f9d7836860e414b04b5e5da52b0541da5069d231774f30e965bcf3bd0db09f6bca74876c2 WHIRLPOOL 9ab4de6bfa5840500f04a4e7d523b6546e0ef08ade017f14b73425e205f039a6da11604f2b0e902085ff3062fff451385f984735029592d4b10ac3d4e0c985b1
-EBUILD mixxx-1.11.0.ebuild 2272 SHA256 64a3e2937a4ee08b7ef24488933355b59b3def84f5aeddabd0353d4482984f84 SHA512 6125b3112828dd6f8417dff96f8fec7229fb2237106d33d32b967922d8b17acb1dce5d79cab641c72935d1a7a04255f3123f3b1262d33427cef47f319a32ce74 WHIRLPOOL d6e9fe781600586cd7c94cc9b2cf063e7620261bbe180014aad56003e839f4df10f1b27d2ed063b353dd06079e82af4ef2d14b2a97d9fbfa22fc4f6840696662
-EBUILD mixxx-1.11.9999.ebuild 2232 SHA256 4e15911d8f7277aa560c0cd4e3b8345d39a530c769d83ffe219600e8ec4e067f SHA512 195ec93322cb97dd34f6d0239236e777eda404fc313fad3b482406383e4250654fe9b416bcda90ef9610e0f9e244901a8a187911142e371c368ca7146c5b60e8 WHIRLPOOL 170e0f02e7ec410f40598b9175fa23b909753c7b4b68a9a5892088e8553ed5ae330cfb37c5f26a0d7914578bb732671d57246764d02cf97847e5b3766fe75106
-EBUILD mixxx-9999.ebuild 2270 SHA256 1900bf23b92a9d8367bc684498c6c89c859568ed6c8f7da9905e9810d936c278 SHA512 43652d1949d20bd1cbd60574f82ea2d4017748cdf725ea42e7842689503e211d001b3ffb16f1ec9710df3b033d42dc98f3fd4ec66ff8d3cda93d467f4bd2c8e5 WHIRLPOOL 316ed8e9e8c64e5e94f9c51aa964e96fd252f30cc36caf123f9e542e445a33d430a3a5e522d3dd885eedafa0d41d7ba73627d4bc9debeb1eeabd5670cdb43b11
-MISC ChangeLog 6364 SHA256 35d14bbca6ae9906560b95f6851f966a8e428bb2d71446b76224a83b8c61f932 SHA512 e700894345d0aa61ad0d39af6aa1b2a1bb3395d9eb248c2f984681521d401b5028bf5131f80f8e4687b3d0f0b79d90c096cccb43b81ac0cd1bedd192791a2022 WHIRLPOOL 0ebc325ae5fcd7a048dd874baa417608209db07e783219ea839df5c58b51b093f3da6a70a45bda26ea0cd08649b08e3042c3d92860822b9a92130b0d2ec3e752
+EBUILD mixxx-1.11.0.ebuild 2268 SHA256 3073dae0132a766076bef6ea221a524ebc0e3a31f2c1d60cab1fad902bb4b4b3 SHA512 441141d4c366cff455998cbd42daed61e745b91940b39dccc5f4a3cce268dcd16d1ae7b1e55033bf53f68a7c65aa486f9f91b571c5888d02d8d1b7f43934168d WHIRLPOOL 895a2e2288c6e46298c4bd31dff4ca1fb900b1c324906b27c0e1efbedc5499c0a727afc8bd8cd168f3af944c9e3e00e382271dfa9ee88111889a203d9c078658
+EBUILD mixxx-1.11.9999.ebuild 2263 SHA256 3d0226957b626e92f6ba2f9d6a7b2d764f6282f940ef77bd534b11fb609b1fc8 SHA512 b94e1a928cbb6f12abb19e0080bb098c58f4458010b866feb6358f745d72208524369e55d3ed8e06c24ef315426a85e9d14263faf52e54e14fdbb9846bb30ccf WHIRLPOOL 2117ce352078cd1e2ca9e8c7abd7d91e61d13b9a18ab3ec880b462c332e8a413b130bc1af150136a0beab41ccbb81bdc229c4bb29f14c673c8a3a24ffd3136c3
+EBUILD mixxx-9999.ebuild 2315 SHA256 8d997d4bff29ae4b5627eaca498964c8f9bf8676788524416fae7c252a5cf7ee SHA512 70170704b4aaaab94f9d08030d83e90efbb276b2aa38432970797523815e460be2fbedb7f417ee97340acb2b165731be99acd6b46908f87471b839920b4c7876 WHIRLPOOL 0f94fa0d436dca38782cb114b2d8f80f4e764ae035c5c6ddd944afbb01a13d159ea3b828a5b8f2e4f280be39840fb0c96dc495895df4637a423d28cad9f63f89
+MISC ChangeLog 6731 SHA256 3585c829fb2c5ddc3471a6a805972cd04f1f7b40ff2175b63e5f2541e326ee45 SHA512 ec395fb297172e3bb1b1b142e36b013e4c454ce9349e4d7ce79aac53afcd80ca7f439f42959d988f5670439b5ecb8fa7a1703089c3468b9dac23a1f8435f1de9 WHIRLPOOL 76bcf59542033b369c17ed73779ae82771c1c1175b6b11904c75ca4c01cfa968fe807bbc48ac7dbea4d0d8094396716084d6a55045e4fd6d28308d905ad2806b
 MISC metadata.xml 485 SHA256 2d28e5b3222a404cd0ae26b12d70640ed15c665204a43496862b77f0396f2038 SHA512 cf3578bae5e75f6b5db4ca71cd00a9389878d87d0983b0c5e0b2858336bd30186df13c58b03b9f1f2e698b651d360058ed0ff63771be6ba98128ae30b886d7f7 WHIRLPOOL 275c04e470f80968e15e0c3ef77cfa4f6fe89917b01ce1d94ea7bebdfd30ee54baae32678d79e7d28dde24bd0f4ad1f8756f185638e77421ab22ebca8e42c555
